<resources>
    <string name="app_name">Ezy Booking</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_simnumber_label">Enter phone number which you used to register for booking</string>
    <string name="hint_useremail">Enter Email</string>
    <string name="hint_simnumber1">Enter Mobile Number 1</string>
    <string name="hint_simnumber2">Enter Mobile Number 2</string>
    <string name="msg_read_consent">I consent this application to access my mobile messages to read the OTPs.</string>
    <string name="profile_button">Profile</string>
    <string name="payment_button">Payment</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_main">DashboardActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="prompt_password">prompt_password</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="appbar_scrolling_view_behavior">appbar_scrolling_view_behavior</string>
</resources>